# pairwise-reference-alignment

./: .gitignore  AGENTS.md  GIT_USAGE.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: experiment1.yaml  experiment1and2_qwen_hhrlhf.yaml  experiment1and2_qwen_rewardbench.yaml  experiment1and2_qwen_rewardbench_chat.yaml  experiment1and2_zephyr_rewardbench.yaml  experiment2.yaml  experiment4_qwen_rewardbench_finite_sample.yaml  experiment4b_qwen_rewardbench_bootstrap.yaml  pilot_qwen_rewardbench_chat_sample.yaml  pilot_qwen_rewardbench_sample.yaml  prepare_cache.yaml  prepare_cache_extended.yaml  smoke.yaml  smoke_cpu.yaml  smoke_real_small.yaml
docs/: Checklist&Usage.md  Experiment4Bootstrap.md  Experiment4FiniteSample.md  ExperimentExecutionPlan.md  ResultFiles.md
fixtures/: toy_pairs.jsonl
pairalign/: __init__.py  config.py  datasets.py  finite_sample.py  io.py  metrics.py  records.py  run.py  scoring.py  smoke.py  swanlab_utils.py  verify.py
plot/: README.md  common_plot.py  plot_chattemplate_overall_bars_mpl.py  plot_chattemplate_subset_family_radar_mpl.py  plot_chattemplate_subset_radar_23_mpl.py  plot_experiment1_overall_bars.py  plot_experiment2_subset_radar.py  plot_experiment3_bootstrap_ci_widths.py  plot_experiment3_bootstrap_summary_mpl.py  plot_experiment3_finite_sample_curves.py  plot_finite_sample_all_models_mpl.py  plot_finite_sample_representative_mpl.py  plot_overall_bars_mpl.py  plot_subset_family_radar_mpl.py  plot_subset_radar_23_mpl.py  run_all_plots.bat
scripts/: prepare_cache.py  run_experiment1.py  run_experiment1and2.py  (+7 more)
(+7 files in other folders)
