[project]
name = "pairwise-reference-alignment"
version = "0.1.0"
description = "Likelihood-induced pairwise reference alignment experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.0",
    "torch>=2.3.0",
    "transformers>=4.43.0",
]

[project.optional-dependencies]
tracking = [
    "swanlab>=0.4.0",
]
